# axum-app

./: .env.example  Cargo.toml  README.md  docker-compose.yaml
crates/config/: Cargo.toml
crates/config/src/: server_config.rs
crates/dto/: Cargo.toml
crates/dto/src/: lib.rs
crates/dto/src/user/request/: update_user.rs
crates/dto/src/user/response/: user.rs
crates/dto/src/validator/: json_validator.rs  mod.rs
crates/entity/: Cargo.toml
crates/entity/src/: action_logs.rs  lib.rs  posts.rs  prelude.rs  sea_orm_active_enums.rs  user_oauth_connections.rs  users.rs
crates/errors/: Cargo.toml
crates/errors/src/: errors.rs  lib.rs  protocol.rs
crates/errors/src/handlers/: mod.rs  system_handler.rs  user_handler.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_user.rs  m20260211_021635_create_posts.rs  m20260211_175842_oauth_providers.rs  m20260211_182039_oauth_connections.rs  m20260211_182412_action_resource_type_enum.rs  m20260211_182635_create_action_logs.rs  main.rs
crates/migration/src/common/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: appstate.rs  lib.rs  main.rs
crates/server/src/api/: mod.rs  openapi.rs  router.rs
crates/server/src/api/health/: health_check.rs  mod.rs  openapi.rs  routes.rs
crates/server/src/api/v1/: mod.rs  openapi.rs
crates/server/src/api/v1/routes/: routes.rs
crates/server/src/api/v1/routes/user/: create_user.rs  delete_user.rs  find_user.rs  mod.rs  openapi.rs  routes.rs  update_user.rs
crates/server/src/connection/: database_conn.rs  http_conn.rs  mod.rs
crates/server/src/middleware/: cors.rs
crates/server/src/repository/user/: create.rs  delete.rs  find.rs  mod.rs  update.rs
crates/server/src/service/user/: create_user.rs  delete_user.rs  find_user.rs  mod.rs  update_user.rs
crates/server/src/utils/: logger.rs
