[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Erlon Bié<erlonbieh@gmail.com>"]
repository = "https://github.com/erlonbie/axum-app"
edition = "2024"
rust-version = "1.91.0"

[workspace.dependencies]
axum-app_entity = { path = "crates/entity" }
axum-app_config = { path = "crates/config" }
axum-app_server = { path = "crates/server" }
axum-app_errors = { path = "crates/errors" }
axum-app_dto    = { path = "crates/dto" }

sea-orm = { version = "2.0.0-rc.30", features = ["postgres-array", "sqlx-postgres", "runtime-tokio-native-tls", "with-ipnetwork"] }
uuid = { version = "1.20.0", features = ["v7", "v4"] }
dotenvy = "0.15.7"
axum = { version = "0.8.8", features = ["multipart", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tracing-appender = "0.2.4"
anyhow = "1.0.100"
reqwest = { version = "0.12.28", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "openapi_extensions", "time", "uuid", "chrono"] }
tower-http = { version = "0.6.8", features = ["cors", "auth", "trace", "request-id"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.dev]
opt-level = 1
