[package]
name = "axum-app_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum-app_config.workspace = true
axum-app_errors.workspace = true

axum.workspace = true
tokio.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
reqwest.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
